add date to header

--- a/sop/sop_fn_tests.qmd
+++ b/sop/sop_fn_tests.qmd
@@ -13,6 +13,7 @@ format:
   docx: default
   # pdf: default
   sctotypst-typst: default
+date: "2025-01-01"
 format-links:
   - html
   - format: sctotypst-typst
