--- a/index.qmd
+++ b/index.qmd
@@ -8,6 +8,7 @@ format:
   docx: default
   # pdf: default
   sctotypst-typst: default
+date: "2023-12-05"
 format-links:
   - html
   - format: sctotypst-typst
