--- a/wi/review_tests.qmd
+++ b/wi/review_tests.qmd
@@ -5,6 +5,7 @@ format:
   docx: default
   # pdf: default
   sctotypst-typst: default
+date: "2025-01-01"
 format-links:
   - html
   - format: sctotypst-typst
