--- a/wi/testing.qmd
+++ b/wi/testing.qmd
@@ -8,6 +8,7 @@ format:
   docx: default
   # pdf: default
   sctotypst-typst: default
+date: "2025-01-01"
 format-links:
   - html
   - format: sctotypst-typst
