--- a/results/pkgassessment.qmd
+++ b/results/pkgassessment.qmd
@@ -3,16 +3,14 @@ title: "Package assessments"
 editor_options:
   markdown:
     wrap: 72
-    
 execute:
   echo: false
   message: false
   warning: false
 format: 
   html: default
-  docx: default
-  # pdf: default
   sctotypst-typst: default
+integral: "false"
 format-links:
   - html
   - format: sctotypst-typst
@@ -210,7 +208,7 @@ outdated_pkgs <- pkgs |>
 ```
 
 
-### Packages with potentially outdated risk assessments:
+# Packages with potentially outdated risk assessments:
 
 ```{r }
 #| eval: !expr knitr::is_html_output()
