--- a/results/pkgtesting.qmd
+++ b/results/pkgtesting.qmd
@@ -5,11 +5,9 @@ editor_options:
     wrap: 72
 format: 
   html: default
-  # docx: default
-  # pdf: default
   sctotypst-typst:
     keep-md: true
-    
+integral: "false"
 format-links:
   - html
   - format: sctotypst-typst
