--- a/wi/pkg_validation.qmd
+++ b/wi/pkg_validation.qmd
@@ -8,7 +8,7 @@ format:
   # docx: default
   # pdf: default
   sctotypst-typst: default
-date: "2025-01-01"
+release_date: "2025-01-01"
 format-links:
   - html
   - format: sctotypst-typst
@@ -24,13 +24,19 @@ execute:
 
 ***Development and Review***
 
+Authored/revised by:
+
 `#set align(center)`{=typst}
 
-|                     | Name           | Date           |
-|---------------------|----------------|----------------|
-| Authored/Revised by | XXXXXXXXXX     | xxxx-xx-xx     |
-| Reviewed by         | YYYYYYYYYY     | xxxx-xx-xx     |
-| Released by         | ZZZZZZZZZZ     | xxxx-xx-xx     |
++-----------------------+------------+
+| Name                  | Date       |
+|                       |            |
++:======================+:===========+
+| Alan Haynes,[^1]      | 2025-01-01 |
++-----------------------+------------+
+
+[^1]: Senior Statistician, Department of Clinical Research (DCR), University of Bern
+
 
 `#set align(left)`{=typst}
 
@@ -38,9 +44,11 @@ execute:
 
 `#set align(center)`{=typst}
 
-| Version | Date       | Author      | Summary of Changes |
-|---------|------------|-------------|--------------------|
-| 0.1     | xxxx-xx-xx | XXXXXXXXXX  | Initial draft      |
++---------+------------+--------------------+-------------------------------------+
+| Version | Date       | Author(s)          | Summary of Changes                  |
++:========+:===========+:===================+:====================================+
+| 1.0     | 2025-01-01 | Alan Haynes,       | Initial version                     |
++---------+------------+--------------------+-------------------------------------+
 
 `#set align(left)`{=typst}
 
